[package]
name = "qbittorrent"
version = "0.2.0"
authors = ["VanillaBrooks <brooks@karlik.org>"]
edition = "2021"
description = "qbittorrent web api implementation"
repository = "https://github.com/VanillaBrooks/qbittorrent"
license = "MIT"

[dependencies]
serde = { version = "1.0.210", features= ["derive"] }
serde_json = "1.0.128"
derive_builder = "0.20.2"
reqwest = { version = "0.12.8", features = ["json"] }
serde_urlencoded = "0.7.1"
derive-getters = "0.5.0"
async-trait = "0.1.83"
thiserror = "1.0.64"
tokio = { version=  "1.40.0", features=["macros", "rt"], optional=true }
url = "2.5.2"
log = "0.4.22"

[dev-dependencies]
tokio = {version=  "1.40.0", features=["macros", "rt"]}

[features]
default = []
tokio = ["dep:tokio"]

[[bin]]
name = "main"
required-features = ["tokio"]
