[package]
name = "qbittp"
version = "0.3.0"
authors = ["Mason Larobina <mason.larobina@pm.me>", "VanillaBrooks <brooks@karlik.org>"]
edition = "2021"
description = "qBittorrent web api implementation."
repository = "https://github.com/mason-larobina/qbittp"
license = "MIT"

[dependencies]
serde = { version = "1.0.210", features= ["derive"] }
serde_json = "1.0.128"
derive_builder = "0.20.2"
reqwest = { version = "0.12.8", features = ["json"] }
serde_urlencoded = "0.7.1"
derive-getters = "0.5.0"
async-trait = "0.1.83"
thiserror = "1.0.64"
tokio = { version=  "1.40.0", features=["macros", "rt"] }
url = "2.5.2"
log = "0.4.22"
